--- a/deployment.yml
+++ b/deployment.yml
@@ -1,19 +1,3 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: squid
-  labels:
-    app: squid
-spec:
-  type: NodePort
-  ports:
-    - port: 3128
-      targetPort: 3128
-      protocol: TCP
-      nodePort: 31280
-  selector:
-    app: squid
----
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
@@ -21,13 +5,13 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app: squid
+      deploy: squid
   replicas: 1
   template:
     metadata:
       name: squid
       labels:
-        app: squid
+        deploy: squid
     spec:
       containers:
         - name: squid
