--- a/configmap-allowlist.yaml
+++ b/configmap-allowlist.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: whitelist
+  name: allowlist
 data:
-  whitelist: |
+  allowlist: |
     .google.com
     .amazonaws.com
