--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -1,9 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 commonLabels:
-  app: docker-squid-whitelist
+  app: docker-squid-allowlist
 resources:
 - deployment.yaml
 - service.yaml
 - configmap.yaml
-- configmap-whitelist.yaml
+- configmap-allowlist.yaml
